--- a/SctollViewAutolayout/Base.lproj/Main.storyboard
+++ b/SctollViewAutolayout/Base.lproj/Main.storyboard
@@ -1,25 +1,107 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="y51-WX-0uu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="HRK-Dv-yWf">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="y51-WX-0uu" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="fPP-us-ZQu"/>
+                        <viewControllerLayoutGuide type="bottom" id="qih-9z-fwl"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="3cU-Ha-Xds">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5E8-jw-hZ0">
+                                <frame key="frameInset" minY="20" width="600" height="580"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qwx-V4-2xI">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TOP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Gdl-Xb-pUO">
+                                                <frame key="frameInset" minX="283" width="34" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BOTTOM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NK0-5H-uHK">
+                                                <frame key="frameInset" minX="265" minY="979" width="71" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LEFT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTe-WQ-wmw">
+                                                <frame key="frameInset" minY="490" width="39" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="RIGHT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b7R-lF-4IP">
+                                                <frame key="frameInset" minX="550" minY="490" width="50" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.55056161920000002" green="0.99719230709999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="b7R-lF-4IP" firstAttribute="centerY" secondItem="qwx-V4-2xI" secondAttribute="centerY" id="GlE-nJ-Jpv"/>
+                                            <constraint firstItem="Gdl-Xb-pUO" firstAttribute="centerX" secondItem="qwx-V4-2xI" secondAttribute="centerX" id="TTa-Xg-KcQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="NK0-5H-uHK" secondAttribute="bottom" id="WFu-qC-x3W"/>
+                                            <constraint firstItem="sTe-WQ-wmw" firstAttribute="centerY" secondItem="qwx-V4-2xI" secondAttribute="centerY" id="cgB-uE-INC"/>
+                                            <constraint firstItem="NK0-5H-uHK" firstAttribute="centerX" secondItem="qwx-V4-2xI" secondAttribute="centerX" id="een-ff-wim"/>
+                                            <constraint firstItem="Gdl-Xb-pUO" firstAttribute="top" secondItem="qwx-V4-2xI" secondAttribute="top" id="fGI-GE-N4H"/>
+                                            <constraint firstAttribute="width" constant="600" id="sSC-nA-v4p"/>
+                                            <constraint firstAttribute="trailing" secondItem="b7R-lF-4IP" secondAttribute="trailing" id="uNJ-Z9-p36"/>
+                                            <constraint firstItem="sTe-WQ-wmw" firstAttribute="leading" secondItem="qwx-V4-2xI" secondAttribute="leading" id="wvq-wt-wLN"/>
+                                            <constraint firstAttribute="height" constant="580" id="zlK-Nq-GIA"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="sSC-nA-v4p"/>
+                                                <exclude reference="zlK-Nq-GIA"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.8595549294" green="0.6607114624" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="qwx-V4-2xI" secondAttribute="bottom" id="0P1-Ah-TFG"/>
+                                    <constraint firstItem="qwx-V4-2xI" firstAttribute="leading" secondItem="5E8-jw-hZ0" secondAttribute="leading" id="KJl-S1-URA"/>
+                                    <constraint firstAttribute="bottom" secondItem="qwx-V4-2xI" secondAttribute="bottom" id="TGZ-Jm-C0F"/>
+                                    <constraint firstAttribute="bottom" secondItem="qwx-V4-2xI" secondAttribute="bottom" id="ehQ-I8-On2"/>
+                                    <constraint firstItem="qwx-V4-2xI" firstAttribute="top" secondItem="5E8-jw-hZ0" secondAttribute="top" id="kaK-ef-Gcb"/>
+                                    <constraint firstAttribute="trailing" secondItem="qwx-V4-2xI" secondAttribute="trailing" id="ojP-qX-2NJ"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="TGZ-Jm-C0F"/>
+                                        <exclude reference="ehQ-I8-On2"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="5E8-jw-hZ0" secondAttribute="trailing" id="8he-lp-vMl"/>
+                            <constraint firstItem="qwx-V4-2xI" firstAttribute="width" secondItem="3cU-Ha-Xds" secondAttribute="width" id="Gln-e1-5lk"/>
+                            <constraint firstItem="qih-9z-fwl" firstAttribute="top" secondItem="5E8-jw-hZ0" secondAttribute="bottom" id="Nhf-7V-pwR"/>
+                            <constraint firstItem="qwx-V4-2xI" firstAttribute="height" secondItem="3cU-Ha-Xds" secondAttribute="height" multiplier="1000/600" id="itv-yI-fIt"/>
+                            <constraint firstItem="5E8-jw-hZ0" firstAttribute="leading" secondItem="3cU-Ha-Xds" secondAttribute="leading" id="sQE-ec-c1i"/>
+                            <constraint firstItem="5E8-jw-hZ0" firstAttribute="top" secondItem="fPP-us-ZQu" secondAttribute="bottom" id="ziv-7n-e7x"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yt5-Ag-4L7" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="334.5" y="81"/>
         </scene>
     </scenes>
 </document>
